# cpp-faster-rcnn

./: README.md
caffe-fast-rcnn/include/caffe/: blob.hpp
caffe-fast-rcnn/include/caffe/layers/: rpn_layer.hpp
caffe-fast-rcnn/src/caffe/layers/: rpn_layer.cpp
caffe-fast-rcnn/src/caffe/proto/: caffe.proto
cpp_faster_rcnn/: CMakeLists.txt  Caffe_DetectorPrivate.cpp  Caffe_DetectorPrivate.h  ImageDetector.cpp  ImageDetector.h  main.cpp
